WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83540
REGRESSION(
r113588
): 15-30% perf. regression on CSS/CSSPropertySetterGetter
https://bugs.webkit.org/show_bug.cgi?id=83540
Summary
REGRESSION(r113588): 15-30% perf. regression on CSS/CSSPropertySetterGetter
Ryosuke Niwa
Reported
2012-04-09 19:39:41 PDT
http://webkit-perf.appspot.com/graph.html#tests=[[314224,2001,32196],[314224,2001,3001],[314224,2001,173262]]&sel=1333978732699.9312,1334010760286.138&displayrange=7&datatype=running
Attachments
Proposed patch
(7.81 KB, patch)
2012-04-10 12:10 PDT
,
Andreas Kling
koivisto
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Simpler patch
(3.55 KB, patch)
2012-04-10 14:36 PDT
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-04-10 00:11:12 PDT
Taking for tomorrow. We're triggering CSSOM clone instantiation from named CSS property getters in the bindings layer.
Andreas Kling
Comment 2
2012-04-10 12:10:36 PDT
Created
attachment 136502
[details]
Proposed patch
Antti Koivisto
Comment 3
2012-04-10 12:13:37 PDT
Comment on
attachment 136502
[details]
Proposed patch r=me
Ryosuke Niwa
Comment 4
2012-04-10 12:16:29 PDT
Comment on
attachment 136502
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136502&action=review
> Source/WebCore/css/CSSComputedStyleDeclaration.cpp:2689 > +PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getUnsafePropertyCSSValueInternal(CSSPropertyID propertyID)
Can we reflect the idea that this CSSValue can't be exposed to the Web? e.g. getPropertyCSSValueInternalWithoutCSSOMWrapper?
Antti Koivisto
Comment 5
2012-04-10 12:19:28 PDT
We should eliminate getPropertyCSSValueInternal entirely. The only clients are in the editing code and that can just access the internal values.
Build Bot
Comment 6
2012-04-10 12:39:59 PDT
Comment on
attachment 136502
[details]
Proposed patch
Attachment 136502
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12385221
Andreas Kling
Comment 7
2012-04-10 14:36:57 PDT
Created
attachment 136543
[details]
Simpler patch Change the behavior of getPropertyCSSValueInternal() instead, yielding a much simpler patch.
Andreas Kling
Comment 8
2012-04-10 14:57:57 PDT
Committed
r113774
: <
http://trac.webkit.org/changeset/113774
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug